# digipocket

./: .gitignore  .metadata  LICENSE  README.md  cmd.md  flutter_rust_bridge.yaml  llama.podspec  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
assets/glove/: glove_vocab.json
assets/onnx/nomic-embed-text-v1.5/: config.json  preprocessor_config.json  tokenizer_config.json
assets/onnx/nomic-vision-v1.5/: config.json
darwin/: build.sh  cmd.md  create_xcframework.sh
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/share/: Info.plist  ShareViewController.swift  shareProfile.entitlements
lib/: app.dart  fonnex.dart  link_preview.dart  llama_presets.dart  llama_widget.dart  main.dart
lib/feature/data_export/: data_export.dart
lib/feature/fonnex/: fonnex.dart
lib/feature/llama_cpp/: llama.dart  llama_cpp.dart
lib/feature/setting/: setting.dart
lib/feature/shared_item/: shared_item.dart
lib/feature/shared_items/: shared_items.dart
lib/feature/user_topic/: user_topic.dart
lib/global/constants/: constants.dart
lib/global/db/: app.dart
lib/global/errors/: errors.dart
lib/helpers/: fonnex.dart  link_preview.dart  llama_presets.dart  llama_widget.dart
lib/theme/: app_colors.dart  app_styles.dart  app_theme.dart  text_scheme.dart
rust_tokenizer/: Cargo.toml  dummy.c  rust_tokenizer.podspec
rust_tokenizer/android/: build.gradle
rust_tokenizer/scripts/: build_android.sh  build_ios.sh
rust_tokenizer/src/: api.rs  bridge_generated.rs  lib.rs
(+84 files in other folders)
