[package]
name = "rust_tokenizer"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

# iOS-safe tokenizer:
# - disables oniguruma (regex engine)
# - removes "serde" (no longer exists)
# - uses wasm-safe tokenizer pipeline (pure Rust)
tokenizers = { version = "0.19", default-features = false, features = ["unstable_wasm"] }
